# DNA-Read-Streams

./: .gitignore  ALUR_PROGRAM.md  CMakeLists.txt  README.md  dna_features.cuh  entropy.cu  gc_content.cu  homopolymer.cu  main.cpp  motif_match.cu  pipeline.cu  prefix_scan.cu
dataset/: dongeng.txt
docs/: ALUR_PROGRAM.md  KONTEKS_RESEARCH_PAPER.md  MASALAH_GAP_SOLUSI_PROYEK.md  PENJELASAN_DETAIL_PROYEK.md  flow_diagram_project.txt
output/: benchmark_report.txt
output/nsight/: dna_pipeline.nsys-rep  dna_pipeline.sqlite
prof/: benchmark_sweep.csv
prof/Both/: benchmark_report.txt
prof/Parallel/: benchmark_report.txt  dna_pipeline_parallel.nsys-rep  dna_pipeline_parallel.sqlite
prof/Sequential/: benchmark_report.txt
src/: gc_content.cu  homopolymer.cu  main.cpp  prefix_scan.cu
